{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 27,
  "lineage": "ca24493a-88b5-c1c2-fc10-5d6280efb1dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004e7a839c24c7dd6",
            "arn": "arn:aws:ec2:eu-central-1:776031435874:elastic-ip/eipalloc-004e7a839c24c7dd6",
            "domain": "vpc",
            "id": "eipalloc-004e7a839c24c7dd6",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-63-180-39-109.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.180.39.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nagarro-agentic-dev-nat-eip"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-nat-eip",
              "Project": "nagarro-agentic"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:776031435874:internet-gateway/igw-0e413927e6b83659c",
            "id": "igw-0e413927e6b83659c",
            "owner_id": "776031435874",
            "tags": {
              "Name": "nagarro-agentic-dev-igw"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-igw",
              "Project": "nagarro-agentic"
            },
            "vpc_id": "vpc-07aa2310e5fa64f96"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:776031435874:loadbalancer/app/nagarro-agentic-dev-alb/d0f804f33454fe2f",
            "arn_suffix": "app/nagarro-agentic-dev-alb/d0f804f33454fe2f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nagarro-agentic-dev-alb-253278759.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:776031435874:loadbalancer/app/nagarro-agentic-dev-alb/d0f804f33454fe2f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nagarro-agentic-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0894d8681f84454e5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09a98bff52003cc0a"
              },
              {
                "subnet_id": "subnet-0d8fc5efdd1add6d9"
              }
            ],
            "subnets": [
              "subnet-09a98bff52003cc0a",
              "subnet-0d8fc5efdd1add6d9"
            ],
            "tags": {
              "Name": "nagarro-agentic-dev-alb"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-alb",
              "Project": "nagarro-agentic"
            },
            "vpc_id": "vpc-07aa2310e5fa64f96",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:776031435874:listener/app/nagarro-agentic-dev-alb/d0f804f33454fe2f/b660eda40637ab3f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:776031435874:targetgroup/nagarro-agentic-dev-tg/8a5ccdf7b69c79f2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:776031435874:listener/app/nagarro-agentic-dev-alb/d0f804f33454fe2f/b660eda40637ab3f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:776031435874:loadbalancer/app/nagarro-agentic-dev-alb/d0f804f33454fe2f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "nagarro-agentic"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.dashboard",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:776031435874:targetgroup/nagarro-agentic-dev-tg/8a5ccdf7b69c79f2",
            "arn_suffix": "targetgroup/nagarro-agentic-dev-tg/8a5ccdf7b69c79f2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/_stcore/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:776031435874:targetgroup/nagarro-agentic-dev-tg/8a5ccdf7b69c79f2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nagarro-agentic-dev-tg",
            "port": 8501,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nagarro-agentic-dev-tg"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-tg",
              "Project": "nagarro-agentic"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07aa2310e5fa64f96"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004e7a839c24c7dd6",
            "association_id": "eipassoc-0527708edc61975e7",
            "connectivity_type": "public",
            "id": "nat-07ee035c697af1f8f",
            "network_interface_id": "eni-0d036794a5358327f",
            "private_ip": "10.0.100.222",
            "public_ip": "63.180.39.109",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09a98bff52003cc0a",
            "tags": {
              "Name": "nagarro-agentic-dev-nat"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-nat",
              "Project": "nagarro-agentic"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:776031435874:route-table/rtb-09202203fc7bf1ab6",
            "id": "rtb-09202203fc7bf1ab6",
            "owner_id": "776031435874",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ee035c697af1f8f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nagarro-agentic-dev-private-rt"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-private-rt",
              "Project": "nagarro-agentic"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aa2310e5fa64f96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:776031435874:route-table/rtb-05efd974c31b3be28",
            "id": "rtb-05efd974c31b3be28",
            "owner_id": "776031435874",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e413927e6b83659c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nagarro-agentic-dev-public-rt"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-public-rt",
              "Project": "nagarro-agentic"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aa2310e5fa64f96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09483ebc15b41bdfe",
            "route_table_id": "rtb-09202203fc7bf1ab6",
            "subnet_id": "subnet-064119766df9a77d0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7f4243748aba9e4",
            "route_table_id": "rtb-09202203fc7bf1ab6",
            "subnet_id": "subnet-06decfcefe06eb307"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9a66aaa22ee2cd6",
            "route_table_id": "rtb-05efd974c31b3be28",
            "subnet_id": "subnet-09a98bff52003cc0a"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073f686de1fb8a0d0",
            "route_table_id": "rtb-05efd974c31b3be28",
            "subnet_id": "subnet-0d8fc5efdd1add6d9"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:776031435874:security-group/sg-0894d8681f84454e5",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0894d8681f84454e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nagarro-agentic-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "776031435874",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nagarro-agentic-dev-alb-sg"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-alb-sg",
              "Project": "nagarro-agentic"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aa2310e5fa64f96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:776031435874:security-group/sg-0b5c88cfa23640469",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5c88cfa23640469",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0894d8681f84454e5"
                ],
                "self": false,
                "to_port": 8501
              }
            ],
            "name": "nagarro-agentic-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "776031435874",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nagarro-agentic-dev-ecs-sg"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-ecs-sg",
              "Project": "nagarro-agentic"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aa2310e5fa64f96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:776031435874:subnet/subnet-064119766df9a77d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064119766df9a77d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776031435874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nagarro-agentic-dev-private-eu-central-1a"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-private-eu-central-1a",
              "Project": "nagarro-agentic"
            },
            "vpc_id": "vpc-07aa2310e5fa64f96"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:776031435874:subnet/subnet-06decfcefe06eb307",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06decfcefe06eb307",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776031435874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nagarro-agentic-dev-private-eu-central-1b"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-private-eu-central-1b",
              "Project": "nagarro-agentic"
            },
            "vpc_id": "vpc-07aa2310e5fa64f96"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:776031435874:subnet/subnet-09a98bff52003cc0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a98bff52003cc0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776031435874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nagarro-agentic-dev-public-eu-central-1a"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-public-eu-central-1a",
              "Project": "nagarro-agentic"
            },
            "vpc_id": "vpc-07aa2310e5fa64f96"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:776031435874:subnet/subnet-0d8fc5efdd1add6d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8fc5efdd1add6d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776031435874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nagarro-agentic-dev-public-eu-central-1b"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-public-eu-central-1b",
              "Project": "nagarro-agentic"
            },
            "vpc_id": "vpc-07aa2310e5fa64f96"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:776031435874:vpc/vpc-07aa2310e5fa64f96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0726feb8c5ecdc7f7",
            "default_route_table_id": "rtb-00ec5ad2927646571",
            "default_security_group_id": "sg-0b79c4921c69ac993",
            "dhcp_options_id": "dopt-06844dd4fa297bb28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07aa2310e5fa64f96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ec5ad2927646571",
            "owner_id": "776031435874",
            "tags": {
              "Name": "nagarro-agentic-dev-vpc"
            },
            "tags_all": {
              "CostCenter": "cloud-migration",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nagarro-agentic-dev-vpc",
              "Project": "nagarro-agentic"
            }
          }
        }
      ]
    }
  ]
}